turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value i
    if (getCouleurSol()==colors(i)){
                                ^LangtonsAnt:7: error: not found: value i
      if (rule(i)=='L'){
               ^LangtonsAnt:8: error: not found: value i
        if (i>=colors.length-1){
            ^LangtonsAnt:11: error: not found: value i
          setCouleurBrosse(colors(i+1))
                                  ^LangtonsAnt:18: error: not found: value i
        if (rule(i)=='R'){
                 ^LangtonsAnt:19: error: not found: value i
          if (i+1>=colors.length){
              ^LangtonsAnt:22: error: not found: value i
          	setCouleurBrosse(colors(i+1))
                                        ^